[package]
name = "wasm-blog"
version = "0.1.0"
authors = ["zehreken <zehreken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
macroquad = "0.3"
