[package]
name = "wasm-blog"
version = "0.1.0"
authors = ["zehreken <zehreken@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4"
egui-macroquad = "0.17"
egui = "0.31"

[features]
default = ["world_angle"]
a_star = []
audio = []
boids = []
cycle_drive_train = []
fuzzy_logic = []
graphic_functions = []
life = []
proc_anim = []
sandbox = []
world_angle = []
